--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,13 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link href="https://ocp.cscglobal.com/cdn/global/csc/styles/kendo.common.min.css" rel="stylesheet">
+
+  <link id="pagestyle" href="https://ocp.cscglobal.com/cdn/global/csc/styles/kendo.csc.min.css" rel="stylesheet">
+  <link href="https://ocp.cscglobal.com/cdn/global/csc/styles/kendo.csc.mobile.min.css" rel="stylesheet">
+
+  <link href="https://ocp.cscglobal.com/cdn/global/csc/styles/csc.materialize.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
